Add UI Edit Profile & Enhance Feature Foldering Structure

--- a/src/i18n/id.json
+++ b/src/i18n/id.json
@@ -13,5 +13,5 @@
 
   "btnLogin": "Masuk",
   "btnCreateAcc": "Buat Akun",
-  "btnResetPassword": "Lupa Sandi"
+  "btnResetPassword": "Ubah Kata Sandi"
 }
